x axis y axis and div values

--- a/jsonparsing.html
+++ b/jsonparsing.html
@@ -3,10 +3,20 @@
 <head>
     <title></title>
 	<meta charset="utf-8" />
+	<style>
+	.rotate
+	{
+		writing-mode: tb;
+	}
+	</style>
 	<script src="parseJson.js"></script>
    
 </head>
 <body>
-   <h2>Please check the console...</h2>
-   </body>
+<div>
+   <b>Enter div height:<input id="height" type="text" />
+   Enter div width:<input id="width" type="text" />
+	<button onclick="render()">Render Chart</button>
+	</div>
+ </body>
 </html>
