--- a/jsonparsing.html
+++ b/jsonparsing.html
@@ -3,12 +3,7 @@
 <head>
     <title></title>
 	<meta charset="utf-8" />
-	<style>
-	.rotate
-	{
-		writing-mode: tb;
-	}
-	</style>
+	<link rel="stylesheet" type="text/css" href="theme.css">
 	<script src="parseJson.js"></script>
    
 </head>
@@ -17,6 +12,7 @@
    <b>Enter div height:<input id="height" type="text" />
    Enter div width:<input id="width" type="text" />
 	<button onclick="render()">Render Chart</button>
+	<button onclick="refreshAll()">Refresh for entering another div size</button>
 	</div>
  </body>
 </html>
