Series Name Included

--- a/indexPage.html
+++ b/indexPage.html
@@ -11,5 +11,6 @@
 <div id="caption" class="caption">
 </div>
 <div id="subcaption" class="subCaption"></div>
+<div id="entireChart" class="chartContainer"></div>
  </body>
 </html>
